--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 
-    <title>Git</title>
+    <title>Git Testes </title>
 </head>
 <body>
     <h1 class="h1">Primeiro Git</h1>
